; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tsocket.c_taosCloseTcpSocket.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tsocket.c_taosCloseTcpSocket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linger = type { i32, i64 }

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_LINGER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"setsockopt SO_LINGER failed: %d (%s)\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @taosCloseTcpSocket(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.linger, align 8
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds %struct.linger, %struct.linger* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = getelementptr inbounds %struct.linger, %struct.linger* %3, i32 0, i32 1
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @SOL_SOCKET, align 4
  %8 = load i32, i32* @SO_LINGER, align 4
  %9 = bitcast %struct.linger* %3 to i8*
  %10 = call i64 @taosSetSockOpt(i32 %6, i32 %7, i32 %8, i8* %9, i32 16)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @errno, align 4
  %14 = load i32, i32* @errno, align 4
  %15 = call i32 @strerror(i32 %14)
  %16 = call i32 @pError(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %15)
  br label %17

17:                                               ; preds = %12, %1
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @taosCloseSocket(i32 %18)
  ret void
}

declare dso_local i64 @taosSetSockOpt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @pError(i8*, i32, i32) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @taosCloseSocket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
